--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@ color:white;
 </div>
 
 
-   <nav class="navbar navbar-expand-sm" style="margin: 10px;"> <img src="logo.png" >
+   <nav class="navbar navbar-expand-sm" style="margin: 10px;"> <img src="logo.PNG" >
     <ul class="navbar-nav ml-auto " >
         <li class="nav-item " > <a class="active" href="#" style= "color:#4ac6d6 ">HOME</a></li>
         <li class="nav-item " > <a class="active" href="#" style= "color:#000 ">BLOG</a>   </li>            
